[package]
name = "cryptowatcher"
version = "0.1.5"
authors = ["hosseind88 <hosseind88@mail.ru>"]
edition = "2018"
description = "A cryptocurrency price tracker written in Rust."
readme = "README.md"
license = "MIT"

[dependencies]
futures = "0.3"
indicatif = "0.15.0"
console = "0.13.0"
clap = "2.33.2"
threadpool = "1.8.1"
failure = { version = "0.1.8", features = [] }
url = "1.7.2"
reqwest = {version = "0.10.8", features = ["blocking", "json"]}
serde_json = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = "^0.8"

[dev-dependencies]
assert_cmd = "0.11"
tiny_http = "0.6.2"
assert_fs = "0.11"
predicates = "1.0"
